@@ -1,3 +1,5 @@
+Jul 09, 2017: libarchive 3.3.2 released
+
 Mar 16, 2017: NFSv4 ACL support for Linux (librichacl)
 
 Feb 26, 2017: libarchive 3.3.1 released
